Return only the new data entry status name as a response to finalise and resolve post requests and not expose the whole DataEntryStatus model through the API
