# backend/openapi.json
@@ -1387,7 +1387,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PollingStationDataEntry"
+                  "$ref": "#/components/schemas/DataEntryStatusResponse"
                 }
               }
             }
@@ -1537,7 +1537,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/PollingStationDataEntry"
+                  "$ref": "#/components/schemas/DataEntryStatusResponse"
                 }
               }
             }
@@ -1876,7 +1876,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/DataEntryStatus"
+                  "$ref": "#/components/schemas/DataEntryStatusResponse"
                 }
               }
             }
@@ -3462,132 +3462,6 @@
           }
         }
       },
-      "DataEntryStatus": {
-        "oneOf": [
-          {
-            "type": "object",
-            "required": [
-              "status"
-            ],
-            "properties": {
-              "status": {
-                "type": "string",
-                "enum": [
-                  "FirstEntryNotStarted"
-                ]
-              }
-            }
-          },
-          {
-            "type": "object",
-            "required": [
-              "state",
-              "status"
-            ],
-            "properties": {
-              "state": {
-                "$ref": "#/components/schemas/FirstEntryInProgress"
-              },
-              "status": {
-                "type": "string",
-                "enum": [
-                  "FirstEntryInProgress"
-                ]
-              }
-            }
-          },
-          {
-            "type": "object",
-            "required": [
-              "state",
-              "status"
-            ],
-            "properties": {
-              "state": {
-                "$ref": "#/components/schemas/FirstEntryHasErrors"
-              },
-              "status": {
-                "type": "string",
-                "enum": [
-                  "FirstEntryHasErrors"
-                ]
-              }
-            }
-          },
-          {
-            "type": "object",
-            "required": [
-              "state",
-              "status"
-            ],
-            "properties": {
-              "state": {
-                "$ref": "#/components/schemas/SecondEntryNotStarted"
-              },
-              "status": {
-                "type": "string",
-                "enum": [
-                  "SecondEntryNotStarted"
-                ]
-              }
-            }
-          },
-          {
-            "type": "object",
-            "required": [
-              "state",
-              "status"
-            ],
-            "properties": {
-              "state": {
-                "$ref": "#/components/schemas/SecondEntryInProgress"
-              },
-              "status": {
-                "type": "string",
-                "enum": [
-                  "SecondEntryInProgress"
-                ]
-              }
-            }
-          },
-          {
-            "type": "object",
-            "required": [
-              "state",
-              "status"
-            ],
-            "properties": {
-              "state": {
-                "$ref": "#/components/schemas/EntriesDifferent"
-              },
-              "status": {
-                "type": "string",
-                "enum": [
-                  "EntriesDifferent"
-                ]
-              }
-            }
-          },
-          {
-            "type": "object",
-            "required": [
-              "state",
-              "status"
-            ],
-            "properties": {
-              "state": {
-                "$ref": "#/components/schemas/Definitive"
-              },
-              "status": {
-                "type": "string",
-                "enum": [
-                  "Definitive"
-                ]
-              }
-            }
-          }
-        ]
-      },
       "DataEntryStatusName": {
         "type": "string",
         "enum": [
@@ -3600,29 +3474,14 @@
           "definitive"
         ]
       },
-      "Definitive": {
+      "DataEntryStatusResponse": {
         "type": "object",
         "required": [
-          "first_entry_user_id",
-          "second_entry_user_id",
-          "finished_at"
+          "status"
         ],
         "properties": {
-          "finished_at": {
-            "type": "string",
-            "description": "When both data entries were finalised"
-          },
-          "first_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the first data entry",
-            "minimum": 0
-          },
-          "second_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the second data entry",
-            "minimum": 0
+          "status": {
+            "$ref": "#/components/schemas/DataEntryStatusName"
           }
         }
       },
@@ -4098,47 +3957,6 @@
           }
         }
       },
-      "EntriesDifferent": {
-        "type": "object",
-        "required": [
-          "first_entry_user_id",
-          "second_entry_user_id",
-          "first_entry",
-          "second_entry",
-          "first_entry_finished_at",
-          "second_entry_finished_at"
-        ],
-        "properties": {
-          "first_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "First data entry for a polling station"
-          },
-          "first_entry_finished_at": {
-            "type": "string",
-            "description": "When the first data entry was finalised"
-          },
-          "first_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the first data entry",
-            "minimum": 0
-          },
-          "second_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "Second data entry for a polling station"
-          },
-          "second_entry_finished_at": {
-            "type": "string",
-            "description": "When the second data entry was finalised"
-          },
-          "second_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the second data entry",
-            "minimum": 0
-          }
-        }
-      },
       "ErrorDetails": {
         "type": "object",
         "required": [
@@ -4212,62 +4030,6 @@
           },
           "reference": {
             "$ref": "#/components/schemas/ErrorReference"
-          }
-        }
-      },
-      "FirstEntryHasErrors": {
-        "type": "object",
-        "required": [
-          "first_entry_user_id",
-          "finalised_first_entry",
-          "first_entry_finished_at"
-        ],
-        "properties": {
-          "finalised_first_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "First data entry for a polling station"
-          },
-          "first_entry_finished_at": {
-            "type": "string",
-            "description": "When the first data entry was finalised"
-          },
-          "first_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the first data entry",
-            "minimum": 0
-          }
-        }
-      },
-      "FirstEntryInProgress": {
-        "type": "object",
-        "required": [
-          "progress",
-          "first_entry_user_id",
-          "first_entry",
-          "client_state"
-        ],
-        "properties": {
-          "client_state": {
-            "type": "object",
-            "description": "Client state for the data entry (arbitrary JSON)"
-          },
-          "first_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "First data entry for a polling station"
-          },
-          "first_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who is doing the first data entry",
-            "minimum": 0
-          },
-          "progress": {
-            "type": "integer",
-            "format": "int32",
-            "description": "Data entry progress between 0 and 100",
-            "maximum": 100,
-            "minimum": 0
           }
         }
       },
@@ -4746,27 +4508,6 @@
           }
         }
       },
-      "PollingStationDataEntry": {
-        "type": "object",
-        "required": [
-          "polling_station_id",
-          "state",
-          "updated_at"
-        ],
-        "properties": {
-          "polling_station_id": {
-            "type": "integer",
-            "format": "int32",
-            "minimum": 0
-          },
-          "state": {
-            "$ref": "#/components/schemas/DataEntryStatus"
-          },
-          "updated_at": {
-            "type": "string"
-          }
-        }
-      },
       "PollingStationDetails": {
         "type": "object",
         "required": [
@@ -5169,79 +4910,6 @@
             "items": {
               "$ref": "#/components/schemas/PoliticalGroupStanding"
             }
-          }
-        }
-      },
-      "SecondEntryInProgress": {
-        "type": "object",
-        "required": [
-          "first_entry_user_id",
-          "finalised_first_entry",
-          "first_entry_finished_at",
-          "progress",
-          "second_entry_user_id",
-          "second_entry",
-          "client_state"
-        ],
-        "properties": {
-          "client_state": {
-            "type": "object",
-            "description": "Client state for the data entry (arbitrary JSON)"
-          },
-          "finalised_first_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "First data entry for a polling station"
-          },
-          "first_entry_finished_at": {
-            "type": "string",
-            "description": "When the first data entry was finalised"
-          },
-          "first_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the first data entry",
-            "minimum": 0
-          },
-          "progress": {
-            "type": "integer",
-            "format": "int32",
-            "description": "Data entry progress between 0 and 100",
-            "maximum": 100,
-            "minimum": 0
-          },
-          "second_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "Second data entry for a polling station"
-          },
-          "second_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who is doing the second data entry",
-            "minimum": 0
-          }
-        }
-      },
-      "SecondEntryNotStarted": {
-        "type": "object",
-        "required": [
-          "first_entry_user_id",
-          "finalised_first_entry",
-          "first_entry_finished_at"
-        ],
-        "properties": {
-          "finalised_first_entry": {
-            "$ref": "#/components/schemas/PollingStationResults",
-            "description": "First data entry for a polling station"
-          },
-          "first_entry_finished_at": {
-            "type": "string",
-            "description": "When the first data entry was finalised"
-          },
-          "first_entry_user_id": {
-            "type": "integer",
-            "format": "int32",
-            "description": "User who did the first data entry",
-            "minimum": 0
           }
         }
       },
