# backend/src/data_entry/structs.rs
@@ -5,7 +5,7 @@ use serde::{Deserialize, Serialize};
 use sqlx::{FromRow, types::Json};
 use utoipa::ToSchema;
 
-use super::status::DataEntryStatus;
+use super::status::{DataEntryStatus, DataEntryStatusName};
 use crate::{
     APIError,
     audit_log::DataEntryDetails,
@@ -313,5 +313,18 @@ mod tests {
         assert_eq!(curr_votes.proxy_certificate_count, 5);
         assert_eq!(curr_votes.voter_card_count, 7);
         assert_eq!(curr_votes.total_admitted_voters_count, 14);
+    }
+}
+
+#[derive(Serialize, Deserialize, ToSchema, Debug)]
+pub struct DataEntryStatusResponse {
+    status: DataEntryStatusName,
+}
+
+impl From<PollingStationDataEntry> for DataEntryStatusResponse {
+    fn from(data_entry: PollingStationDataEntry) -> Self {
+        DataEntryStatusResponse {
+            status: data_entry.state.0.status_name(),
+        }
     }
 }
